Created the first segment of my HTML.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,37 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
+    <title>Resume</title>
+    <<link rel="stylesheet" href="style.css" type="text/css">
   </head>
   <body>
+    <section class="container">
+      <header>
+        <h1> David Behrenhauser </h1>
+        <p>(717)799-8363</p>
+        <p>dbehrenhauser@gmail.com</p>
+      </header>
+
+      <article class="objectives">
+        <h3>Objectives/Goals</h3>
+          <p>
+            I grew up going to multiple schools spending most of my education at Garden Spot in New Holland, Pennsylvania. Throughout my education I picked up major skills in Math, English, and a minor in Computer Programming during High School. I have moved on to an enrollment of Thaddeus Stevens College of Technology in Lancaster, and I am currently enrolled in Computer Software Engineering Technology. Though I have no work experience as of yet I am very passionate of this career and hope to pursue it for many years to come. It would be my dream and passion to work for a company that will gracefully allow me to gain experience whilst I work. I hope to ensure a place not only in the company, but in the employees as a beneficial and reliable friend.
+          </p>
+      </article>
+
+      <article class="education">
+        <h3>Education</h3>
+        <h3>Skills</h3>
+        <h4>Company: Zerbe Sisters Nursing Center</h4>
+        <p>
+          In the past summer jobs, I had applied to work for a retirement home known as Zerbe Sisters. Though it has gone through many changes since I had left, I did leave on great terms on which I could return to the job if I pleased. For work experience I worked on everything kitchen and dinner related services, and I did all of it to the fullest. I was considered equal to my superiors and was highly remarked from my co-workers.
+        </p>
+        <p>
+          From my work experience I have picked up a lot on team communication and co-operation. I work well to try and please others, focussing on representing the efficiency of my squad as a whole. I learned to prevent laziness, procrastination, and imediately focus on getting the job done right the first time. I even adapt well to new surroundings very easily.
+        </p>
+      </article>
+
+    </section>
   </body>
 </html>
