--- a/index.html
+++ b/index.html
@@ -23,14 +23,66 @@
       <article class="education">
         <h3>Education</h3>
         <h3>Skills</h3>
-        <h4>Company: Zerbe Sisters Nursing Center</h4>
+        <h4>School: Garden Spot</h4>
+        <h5>Type: High School</h4>
         <p>
-          In the past summer jobs, I had applied to work for a retirement home known as Zerbe Sisters. Though it has gone through many changes since I had left, I did leave on great terms on which I could return to the job if I pleased. For work experience I worked on everything kitchen and dinner related services, and I did all of it to the fullest. I was considered equal to my superiors and was highly remarked from my co-workers.
+          During my education in Garden Spot High School I had achieved average grades for classes not affiliated in Math, English, and Computer Programming. I had the least care for other subjects and did not give it my all. During my years, I had achieved student of the month for English. I earned team captain for their Archery team, and affiliated myself with Garden Spots Rifle team. I Graduated in May 2017.
+        </p>
+        <h4>School: Thaddeus Stevens College of Technology</h4>
+        <h5>Type:Major
+        <p>
+          I have enrolled in August and have been in my first semester for four weeks. We so far academically have adept experience in front end programming on the subjects of HTML and CSS. My non-major courses so far are English Composition and Intermediate Algebra.
         </p>
         <p>
-          From my work experience I have picked up a lot on team communication and co-operation. I work well to try and please others, focussing on representing the efficiency of my squad as a whole. I learned to prevent laziness, procrastination, and imediately focus on getting the job done right the first time. I even adapt well to new surroundings very easily.
+          From my school experience I have picked up a lot on team communication and co-operation. I work well to try and please others, focussing on representing the efficiency of my squad as a whole. I learned to prevent laziness, procrastination, and imediately focus on getting the job done right the first time. I even adapt well to new surroundings very easily.
         </p>
       </article>
+
+      <article class="work">
+        <h3>Work Experience</h3>
+        <h4>Company: Zerbe Sisters Nursing Center</h4>
+        <h5>Employment: Kitchen Staff</h5>
+        <p>
+          In the past summer jobs, I had applied to work for a retirement home known as Zerbe Sisters. Though it has gone through many changes since I had left, I did leave on great terms on which I could return to the job if I pleased. For work experience I worked on everything kitchen and dinner related services, and I did all of it to the fullest. I was considered equal to my superiors and was highly remarked from my co-workers. I worked at Zerbe Sisters for a full year before I resigned to go to college in April leaving on great terms.
+        </p>
+        <h5>Contacts: pending...</h5>
+      </article>
+
+      <article class="volunteer">
+        <h3>Volunteer Experience</h3>
+        <h4>Company: Zerbe Sisters Nursing Center</h4>
+        <p>
+          Before I started working as an employee for Zerbe Sisters Nursing Center, I had applied to volunteer at the Maintenance staff. There I would perform room inspections by checking for damaged outlets, electronics are up to code, and medical equipment was plugged in and functional. I would perform outside tasks like gardening, light fixture replacements, and ventalation gunk removal. I worked dilligently and earned my place as one of their emplyees. I worked for a total of 67 hours with no pay.
+        </p>
+        <h5>Contacts: pending...</h5>
+      </article>
+
+      <article class="hobbies">
+        <h3>Hobbies</h3>
+        <p>
+          From starting out as a computer gamer, I was much more interested in learning the code and finding out ways to "hack" the game I played. I have minor knowledge on "hot fixing" files to my liking and have moderate skill on scanning the minor details of a program to try and find a glitch. I currently just spend time finding glitches or modifying game code to document how programs work and how you can change them.
+        </p>
+      </article>
+
+      <footer>
+        <h1>Contact Me</h1>
+        <ul class="left">
+          <li>
+            David Behrenhauser
+          </li>
+          <li>
+            (717)799-8363
+          </l1>
+        </ul>
+        <ul>
+          <li class="right">
+            <a href="https://github.com/Dragontamer247" target="_blank" title="Github Profile">My Github Profile</a>
+          </li>
+          <li>
+            <a href="mailto:dbehrenhauser@gmail.com" target="_blank" title="Email Me">Send an Email</a>
+          </li>
+        </ul>
+      </footer>
 
     </section>
   </body>
